# flappyBirdOpenGl

./: CMakeLists.txt
includes/: Control.h  GameObject.h  Model.h  View.h  bird.h
source/: Control.cpp  GameObject.cpp  Model.cpp  View.cpp  bird.cpp  main.cpp
source/Shaders/: FRAGMENT_SHADER.TXT  VERTEX_SHADER.TXT
